test/test-cases/negative/lexical_errors.pas

Program lexical_errors(input, output);

// 3x 标识符词法错误
Var 3x: integer;
// 未定义词法错误
~
Begin
End.
